[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synergyhub"
version = "0.1.0"
description = "企业级 AI Agent 协作平台"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SynergyHub Team", email = "example@email.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["synergyhub*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
